--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- font awesome cdn -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <!-- css link -->
+    <link rel="stylesheet" href="CSS/style.css" />
     <title>influencer-gear website</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- header section start -->
+    <header>
+      <!-- navbar section start  -->
+      <nav>
+        <h2>Influencer products</h2>
+
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">Products</a></li>
+          <li><a href="">Sign up</a></li>
+          <li><a href="">Log In</a></li>
+
+          <div class="font-awesome-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+        </ul>
+      </nav>
+      <!-- navbar section end -->
+
+      <!-- banner section start -->
+      <div class="banner-container">
+
+        <div class="banner-content">
+          <h2>Start your Journey as <br> Influencer</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.</p>
+          <button class="btn-primary">Preebook now</button>
+        </div>
+
+       <div class="banner-image">
+        <img src="images/main-camera.png" alt="">
+       </div>
+
+      </div>
+      <!-- banner section start -->
+    </header>
+    <!-- header section end -->
+    <main>
+        
+        <!-- brand section start -->
+
+        <section id="brand">
+            <div class="brand-image">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+                <img src="logos/Walmart.svg" alt="">
+            </div>
+        </section>
+
+        <!-- brand section end -->
+    </main>
+
+  </body>
 </html>
