--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
           </div>
           
-          <div class="popular-box">
+          <div class="popular-box popular-box-margin">
             <img src="images/drone.png" alt="" />
             <h4>Drone</h4>
             <strong>$980.25</strong>
@@ -218,7 +218,16 @@
 
       <!-- feature section start -->
       <section>
-        
+        <div class="feature-container">
+          <div class="feature-container">
+            <img src="images/gear.png" alt="">
+          </div>
+          <div class="feature-content">
+            <h2>Featured products at one place</h2>
+            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <button class="btn-primary">Join Now</button>
+          </div>
+        </div>
       </section>
       <!-- feature section end -->
 
