feature section responsive

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
       <!-- feature section start -->
       <section>
         <div class="feature-container">
-          <div class="feature-container">
+          <div class="feature-image">
             <img src="images/gear.png" alt="">
           </div>
           <div class="feature-content">
