footer section creat and finsih the website

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
         <h3 class="popular-heading">Popular Collection</h3>
 
         <div class="popular-container">
-
           <div class="popular-box popular-box-margin">
             <img src="images/tripod.png" alt="" />
             <h4>Flex Tripod</h4>
@@ -98,9 +97,13 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
-          
+
           <div class="popular-box">
             <img src="images/mic.png" alt="" />
             <h4>microphone</h4>
@@ -112,7 +115,11 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
           <div class="popular-box">
             <img src="images/airpod.png" alt="" />
@@ -125,9 +132,13 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
-          
+
           <div class="popular-box popular-box-margin">
             <img src="images/drone.png" alt="" />
             <h4>Drone</h4>
@@ -139,7 +150,11 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
           <div class="popular-box">
             <img src="images/lights.png" alt="" />
@@ -152,7 +167,11 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
           <div class="popular-box">
             <img src="images/setup.png" alt="" />
@@ -165,7 +184,11 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
 
           <div class="popular-box">
@@ -179,7 +202,11 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
 
           <div class="popular-box">
@@ -193,7 +220,11 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
 
           <div class="popular-box">
@@ -207,30 +238,49 @@
               <i class="fa-solid fa-star"></i>
               <i class="fa-solid fa-star"></i>
             </p>
-            <h6>Wordwide shifting <br> available <br> Buyers protection possible!</h6>
+            <h6>
+              Wordwide shifting <br />
+              available <br />
+              Buyers protection possible!
+            </h6>
           </div>
-
-
         </div>
       </section>
       <!-- Popular Collection section end -->
-
 
       <!-- feature section start -->
       <section>
         <div class="feature-container">
           <div class="feature-image">
-            <img src="images/gear.png" alt="">
+            <img src="images/gear.png" alt="" />
           </div>
           <div class="feature-content">
             <h2>Featured products at one place</h2>
-            <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+            <p>
+              Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+              amet sint. Velit officia consequat duis enim velit mollit.
+              Exercitation veniam consequat sunt nostrud amet.
+            </p>
             <button class="btn-primary">Join Now</button>
           </div>
         </div>
       </section>
       <!-- feature section end -->
-
     </main>
+
+    <!-- footer section start  -->
+    <footer>
+      <h3>Influencer products</h3>
+      <p>Copyright &copy; 2020  influencer products</p>
+      <p>All rights reserved</p>
+      <div class="icon">
+        <i class="fa-brands fa-instagram"></i>
+        <i class="fa-solid fa-globe"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-youtube"></i>
+      </div>
+    </footer>
+    <!-- footer section end  -->
+
   </body>
 </html>
